# kingdoms-arena

./: .ignore  Cargo.toml  readme.md
.github/workflows/: ci.yaml  release.yaml
assets/sprites/: archer.png~  elven_archer.ase
src/: ai.rs  animation.rs  coin.rs  collision.rs  collisions.rs  creatures.rs  lib.rs  main.rs  recruitment.rs  structure.rs  structures.rs  ui.rs  units.rs
src/creatures/: mod.rs  states.rs
src/subject/: content.rs  mod.rs  state.rs
src/subjects/: content.rs  mod.rs  state.rs  states.rs  weapons.rs
src/ui/: coin_panel.rs  mod.rs  recruitment_panel.rs  start_menu.rs  subject_panel.rs
src/weapon/: mod.rs
src/weapons/: content.rs  mod.rs
